# WiseCal

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  gcal.py  main.py  pyproject.toml  wise_tt.py  wisecal.py  wisecal_cron.py
templates/: configure.html  error.html  index.html  setup.html  success.html
